fix integration with Android project. Replaced DatatypeConverter